# Oxygen-18-Analysis

./: gso18.csv  main.py  pyproject.toml  store.json
